# vigilante

./: .gitignore  CMakeLists.txt  LICENSE
src/: Game.cpp  Game.h  GameClock.h  main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AnimationComponent.h  AnimationPlayerComponent.h  CameraComponent.h  CameraFollowComponent.h  CollisionComponent.h  Components.h  InputKeyboardComponent.h  JumpComponent.h  LifeComponent.h  RigidBodyComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
src/Components/Player/: OnCollisionComponent.h
src/Events/: EventCollision.h
src/Scene/: Scene.cpp  Scene.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraMovementSystem.cpp  CameraMovementSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputKeyboardSystem.cpp  InputKeyboardSystem.h  JumpSystem.cpp  JumpSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  Systems.h
src/Systems/Debug/: DebugRenderCollisionSystem.cpp  DebugRenderCollisionSystem.h
